# LawPaw

./: .gitignore  README.md  chatbot.ipynb  pdf_to_snapshot.ipynb  requirements.txt
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/flaskapp/: __init__.py  chatbot.py
flaskapp/: __init__.py  auth.py  chatbot.py  models.py
frontend/: .gitignore  package-lock.txt  package.txt
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/Pages/cantons/: CantonPage.css  CantonPage.js  CantonPageDE.js  CantonPageFR.js
frontend/src/Pages/category/: CategoryPage.css  CategoryPageDE.js  CategoryPageEN.js  CategoryPageFR.js
frontend/src/Pages/chatbot/: ChatBotPage.css  ChatBotPage.js
frontend/src/Pages/homepage/: HomePage.css  HomePage.js
frontend/src/Pages/intro/: intro.css  intro.js
frontend/src/api/chat/: APIbot.js  api.js  embeddings.js  route.js  vector-db.js
frontend/src/components/: ChatBox.css  ChatBox.js  ChatBoxTest.js  ChatInput.css  ChatInput.js  ChatMessages.css  ChatMessages.js  FlipAlert.js  LoadingSpinner.css  LoadingSpinner.js  ScrollDownIcon.css  ScrollDownIcon.js  SelectQuestions.css  SelectQuestions.js
